functions_exercises(good)_ready_for_review_Emma

--- a/5.1_functions/functions_(need).ipynb
+++ b/5.1_functions/functions_(need).ipynb
@@ -1,1 +1,437 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 User-defined functions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.1 Named Functions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Named functions that return"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Named functions that don\u2019t return"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.2 Anonymous functions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.3 Optional arguments"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.4 The importance of functions?"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### An argument for functions"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### A word of caution"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Need)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9d5a6b4b",
+   "metadata": {},
+   "source": [
+    "# What to expect in this chapter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "235b575d-e8b0-492b-b8bf-4a347a4554fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f5f738d9-b74e-43b0-aedb-a51b3c5f2add",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greeting(name):\n",
+    "    if name == 'Batman':\n",
+    "        return 'Hello Batman! So, nice to meet you!'\n",
+    "    else:\n",
+    "        return f'Hello {name}!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d18425cd-a031-4675-883d-e7d59501adc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Super Man!'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting(\"Super Man\")`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "879e432f",
+   "metadata": {},
+   "source": [
+    "# 1 User-defined functions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "57b1ec57",
+   "metadata": {},
+   "source": [
+    "## 1.1 Named Functions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "88194482",
+   "metadata": {},
+   "source": [
+    "### Named functions that return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1d8b99a8-90a6-43dd-98d2-96ed3328746c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def basic_stats(numbers):\n",
+    "    np_numbers = np.array(numbers)\n",
+    "    my_min = np_numbers.min()\n",
+    "    my_max = np_numbers.max()\n",
+    "    my_mean = np_numbers.mean()\n",
+    "    return np.array([my_min, my_max, my_mean])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "86227de5-eaee-4fd7-8a61-080e663d1d5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 5., 3.])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basic_stats([1, 2, 3, 4, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ea0f6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ae7c42d3",
+   "metadata": {},
+   "source": [
+    "### Named functions that don’t return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1693aa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "45ea3475",
+   "metadata": {},
+   "source": [
+    "## 1.2 Anonymous functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "29586583-f0bc-4df0-ba5c-8cbb6ffd21a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_short_function = lambda name: f\"Hello {name}!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "af52c166-72f6-48e1-88bb-3e9da54b5fef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Super Man!'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_short_function(name=\"Super Man\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5f1fe549-c6d3-4e39-ad9e-f02100661685",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 9, -19],\n",
+       " [1, 8, -18],\n",
+       " [2, 7, -17],\n",
+       " [3, 6, -16],\n",
+       " [4, 5, -15],\n",
+       " [5, 4, -14],\n",
+       " [6, 3, -13],\n",
+       " [7, 2, -12],\n",
+       " [8, 1, -11],\n",
+       " [9, 0, -10]]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers=[[9, 0, -10],\n",
+    "         [8, 1, -11],\n",
+    "         [7, 2, -12],\n",
+    "         [6, 3, -13],\n",
+    "         [5, 4, -14],\n",
+    "         [4, 5, -15],\n",
+    "         [3, 6, -16],\n",
+    "         [2, 7, -17],\n",
+    "         [1, 8, -18],\n",
+    "         [0, 9, -19]]\n",
+    "\n",
+    "def my_sort_function(numbers):\n",
+    "    return numbers[0]\n",
+    "\n",
+    "sorted (numbers, key=my_sort_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1500d91a-e4a4-41ff-8ddd-291ed2c75e57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 9, -19],\n",
+       " [1, 8, -18],\n",
+       " [2, 7, -17],\n",
+       " [3, 6, -16],\n",
+       " [4, 5, -15],\n",
+       " [5, 4, -14],\n",
+       " [6, 3, -13],\n",
+       " [7, 2, -12],\n",
+       " [8, 1, -11],\n",
+       " [9, 0, -10]]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(numbers)  #decide on the order using a set criteria "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d943376f-9d58-47d2-8fdd-f738fd6e997b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[9, 0, -10],\n",
+       " [8, 1, -11],\n",
+       " [7, 2, -12],\n",
+       " [6, 3, -13],\n",
+       " [5, 4, -14],\n",
+       " [4, 5, -15],\n",
+       " [3, 6, -16],\n",
+       " [2, 7, -17],\n",
+       " [1, 8, -18],\n",
+       " [0, 9, -19]]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(numbers, key=lambda number: numbers [1])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e18a15b5",
+   "metadata": {},
+   "source": [
+    "## 1.3 Optional arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "213a1bb8-98f3-471f-9edc-dfe8cd1e22b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greeting(name='no one', pre='basket'): \n",
+    "    if name == 'Batman':\n",
+    "        return 'Hello Batman! So, nice to meet you!'\n",
+    "    else:\n",
+    "        return f'Hello --{pre}--{name}!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "99f9e0c6-fe3a-4067-afe3-5b6ac7119446",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello --basket--Robin!'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting('Robin')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b61f9ead",
+   "metadata": {},
+   "source": [
+    "## 1.4 The importance of functions?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "de727aa4",
+   "metadata": {},
+   "source": [
+    "### An argument for functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21711f5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d7b5efca",
+   "metadata": {},
+   "source": [
+    "### A word of caution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aaa7073",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
