amended_fundamentals(need)_emma

--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -86,18 +86,18 @@
    "id": "1301f3f5-d631-4a67-ab69-e6e02523dc65",
    "metadata": {},
    "source": [
-    "| #    |  **Terms**  |   **Description** |\n",
-    "| :--- | :--: | ---: |\n",
-    "| 1    |  Function  | It is a set of instructions that will carry out a  task |\n",
-    "| 2    |  Arguments  | They are the variables/values inside the function |\n",
-    "| 3    |  Comments  | Short inputs to explain the purpose of the code |\n",
-    "| 4    |  Indentations  | Spaces that indicate the block of a code |\n",
-    "| 5    |  Packages  | It contains modules that perform specific tasks |\n",
-    "| 6    |  .  | It allows you to accesss blocks|\n",
-    "| 7    |  :  | Allows you to pick a block |\n",
-    "| 8    |  []  | Is used to list data |\n",
-    "| 9    |  [[],[]]  | A list that contains two other lists |\n",
-    "| 10   |  {}  | Stores data in a dictionary which stores data in key value pairs |"
+    "| #   | **Terms**     | **Description**                                                  |\n",
+    "|:---:|:--------------|:---------------------------------------------------------------- |\n",
+    "| 1   | Function      | It is a set of instructions that will carry out a task           |\n",
+    "| 2   | Arguments     | They are the variables/values inside the function                |\n",
+    "| 3   | Comments      | Short inputs to explain the purpose of the code                  |\n",
+    "| 4   | Indentations  | Spaces that indicate the block of a code                         |\n",
+    "| 5   | Packages      | It contains modules that perform specific tasks                  |\n",
+    "| 6   | .             | It allows you to access a specific tool within a package (Numpy) |\n",
+    "| 7   | :             | Allows you to pick a block                                       |\n",
+    "| 8   | []            | Is used to list data                                             |\n",
+    "| 9   | [[],[]]       | A list that contains two other lists                             |\n",
+    "| 10  | {}            | Stores data in a dictionary which stores data in key-value pairs |"
    ]
   },
   {
