amended_fundamentals(good)_Emma

--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4d6e2663-06aa-47cd-a205-1f3eb57182dd",
    "metadata": {
     "editable": true,
@@ -33,7 +33,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What is your name? Emma\n",
+      "What is your name? EMMA\n",
       "What is your age? 23\n"
      ]
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f1e466a3-52c4-4e71-8e40-fd4bd5626529",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How you doin Emma\n"
+      "How you doin EMMA\n"
      ]
     }
    ],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f68bd8b3-f2cb-4dd6-8b65-40a5ef46df50",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my name is Emma and I am 23 years old\n"
+      "my name is EMMA and I am 23 years old\n"
      ]
     }
    ],
