amended_fundamentals(good)_Emma

--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -81,6 +81,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "c6f1a803-0acd-4cb2-9ced-d8ee48ac55c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"EMMA\"\n",
+    "age = \"23\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "85e78ca7-4bf5-4f89-9b5f-ad4ab2f97cd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is EMMA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"my name is {name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "33cab6c4-17f3-4153-a532-9e1100fec247",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is EMMA and I am 23 years \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"my name is {name} and I am {age} years \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "72ddc677-862e-48ca-8e27-9260bd5deb12",
    "metadata": {},
