loops(good)_exercise_ready_for_review_Emma

--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -34,11 +34,11 @@
    "source": [
     "squares_of_odds=[] #where the odd numbers are going to be stored \n",
     "for number in range(10): #for numbers 0-9\n",
-    "    if number %2==0: #check if the number is even by dividing by 2, no remainders\n",
+    "    if number %2 == 0: #check if the number is even by dividing by 2, no remainders\n",
     "        continue #if number is even, skip and go to next number\n",
     "    squares_of_odds.append(number**2) #calculate square and add to list\n",
     "\n",
-    "print(squares_of_odds)"
+    "print(squares_of_odds)\n"
    ]
   },
   {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "fd4d4665-d564-4af7-b4df-eb5eaab49e2a",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "288 ns ± 2.86 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "453 ns ± 7.06 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -97,12 +97,13 @@
     "squares_of_odds=[] \n",
     "for number in range(10):\n",
     "    if number %2==0: \n",
-    "        continue"
+    "        continue\n",
+    "    squares_of_odds.append(number**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "f9f92934-f6fc-427d-87c1-2de2c97d439a",
    "metadata": {},
    "outputs": [
@@ -110,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "417 ns ± 18.9 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "533 ns ± 200 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -125,7 +126,8 @@
    "id": "262b8b7b-22e7-48c3-83d3-e2e2e85884d1",
    "metadata": {},
    "source": [
-    "Between the two solutions, the first method was faster."
+    "Between the two solutions, the first method was faster.\n",
+    "This is because the code took 453 ns to run with a standard deviation if 7.06 ns per loop "
    ]
   },
   {
