storing_data(Need)_edited_Emma

--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -32,7 +32,7 @@
    "id": "29412f91-4e02-43af-b7a8-141add9a8f50",
    "metadata": {},
    "source": [
-    "1. Similarities: store items in specific order, chhange items after they are created. _Data in lists and arrays must be accessed using a zero-based index_.\n",
+    "1. Similarities: store items in specific order, change items after they are created. _Data in lists and arrays must be accessed using a zero-based index_.\n",
     "2. Difference: you can put different types of items in a list, all items in an arry need to be the same type. _Lists can change in size during runtime, arrays can't_.\n",
     "3. Dictionary: stores data in a key-value pair. "
    ]
