amended_files_folders&OS_Emma

--- a/6.2_files,_folders_&_os__exercises/FIles, Folders & OS Exercise (need).ipynb
+++ b/6.2_files,_folders_&_os__exercises/FIles, Folders & OS Exercise (need).ipynb
@@ -2582,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "7e59c257-f850-4f90-bd44-0ceea0fb2cfb",
    "metadata": {},
    "outputs": [
@@ -2617,7 +2617,7 @@
     "for city in cities:\n",
     "    city_folders = os.path.join(destination_directory, city)\n",
     "    # Check if the folder already exists; if not, create it\n",
-    "    if not os.path.exists(city_folder):\n",
+    "    if not os.path.exists(city_folders):\n",
     "        os.makedirs(city_folder)\n",
     "\n",
     "print(\"List of city folders created:\")\n",
